Defect 807 : fix white-box height overflow issue

--- a/node-app/src/views/core/components/content/teaser/styles.scss
+++ b/node-app/src/views/core/components/content/teaser/styles.scss
@@ -222,6 +222,7 @@
         opacity: 0.9;
         margin: 0 27px;
         width: 470px;
+        max-height: 100%;
     }
 }
 // IE Specific fix for white box 
